--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,8 @@ h2 {
   font-family: "Fira Sans", sans-serif;
   font-size: 1.5rem;
   opacity: 0.8;
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
 
 .navbar-brand {
@@ -22,6 +24,11 @@ h2 {
 
 #navbarCollapse {
   width: 10%;
+}
+
+.subheader {
+  font-size: 2em;
+  display: inline-block;
 }
 
 .sprintItem {
@@ -94,4 +101,5 @@ h2 {
   font-family: "Work Sans", sans-serif;
   text-align: justify;
   color: black;
+  margin-bottom: 0;
 }
